--- a/connect-4/main.css
+++ b/connect-4/main.css
@@ -1,7 +1,7 @@
 
 h1 {
     background-color: yellow;
-    color: pink;
+    color: black;
 }
 
 
@@ -19,7 +19,7 @@ h1 {
     border-color: black;
     display: grid;
     grid-template-columns: 1fr;
-    background-color: turquoise;
+    background-color: rgb(217, 21, 21);
 }
 
 .player-two {
@@ -82,8 +82,8 @@ img {
 
 #winner-display {
     display: none;
-    height: 50px;
-    font-size: 100px;
+    height: 20px;
+    font-size: 30px;
     color: rgb(130, 235, 130);
 }
 
@@ -100,6 +100,7 @@ body {
 
 /* CSS */
 .button-style {
+    margin: 20px 10px; 
   background-color: #3DD1E7;
   border: 0 solid #E5E7EB;
   box-sizing: border-box;
